// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 1`] = `
Array [
  Array [
    undefined,
    Array [
      "foo",
      "bar",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 2`] = `
Array [
  Array [
    undefined,
    Array [
      "baz",
      "boo",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add note about Pin 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| \`dummy\` | devDependencies | undefined | 1.1.0 |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

:pushpin: **Important**: Renovate will wait until you have merged this Pin PR before creating any *upgrade* PRs for the affected packages. Add the preset \`:preserveSemverRanges\` your config if you instead don't wish to pin dependencies.

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" in timezone some timezone

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Renovate will keep this PR updated whenever it falls behind the base branch.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| \`dummy\` | devDependencies | undefined | 1.1.0 |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create group PR 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| all | devDependencies | lockFileMaintenance |  |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |
| \`a\` | undefined | undefined | aaaaaaa | |
| \`b\` | undefined | pin | some_new_value@bbbbbbb | |
| \`c\` | undefined | undefined | undefined | |
| all | undefined | lockFileMaintenance |  | |

:abcd: If you wish to disable git hash updates, add \`\\":disableDigestUpdates\\"\` to the extends array in your config.

:wrench: This Pull Request updates \`package.json\` lock files to use the latest dependency versions.

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

<details>
<summary>renovateapp/dummy</summary>

</details>

---

### Renovate configuration

:date: **Schedule**: No schedule defined.

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:ghost: **Immortal**: This PR will be recreated if closed unmerged. Get [config help](https://github.com/renovatebot/config-help/issues) if that's undesired.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create privateRepo PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| \`dummy\` | devDependencies | undefined | 1.1.0 |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: No schedule defined.

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should return modified existing PR 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| \`dummy\` | devDependencies | undefined | 1.1.0 |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "Update dependency dummy to v1.1.0",
}
`;

exports[`workers/pr ensurePr should return modified existing PR title 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Type | Update | New value | References |
|--|--|--|--|--|
| \`dummy\` | devDependencies | undefined | 1.1.0 |[homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "wrong",
}
`;

exports[`workers/pr ensurePr should return unmodified existing PR 1`] = `Array []`;
